--- a/myKmAdressBook/Content/Site.css
+++ b/myKmAdressBook/Content/Site.css
@@ -22,3 +22,25 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* ----------------------------- Konica Minolta - Anpassungen ------------------------------ */
+
+/* ----------------------------- HEADER ---------------------------------------------------- */
+
+#km-logo{
+    margin-top: 10px; 
+}
+
+#km-nav{
+    margin-top: 10px; 
+}
+
+/* ----------------------------- CONTENT -------------------------------------------------- */
+
+#km-header-content{
+    margin-top: 20px; 
+}
+
+#km-content{
+    margin-top: 15px; 
+}
