--- a/myKmAdressBook/Views/Shared/_Layout.cshtml
+++ b/myKmAdressBook/Views/Shared/_Layout.cshtml
@@ -19,31 +19,21 @@
     </script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new {@class = "btn btn-default" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+    <header class="navbar-fixed-top">
+        <div class="col-md-10">
+            <img src="~/Content/images/Konica.png" id="km-logo"/>
+        </div> 
+        <div class="col-md-2 right" id="km-nav">
+                @Html.ActionLink("Startseite", "Index", "Home") |
+                @Html.ActionLink("About", "About", "Home") |
+                @Html.ActionLink("Kontakt", "Contact", "Home")
         </div>
-    </div>
+    </header>
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer class="panel-footer navbar-fixed-bottom">
+            <p>&copy; @DateTime.Now.Year - Konica Minolta Serienbrief Generator</p>
         </footer>
     </div>
 
