--- a/myKmAdressBook/Views/Adresses/Index.cshtml
+++ b/myKmAdressBook/Views/Adresses/Index.cshtml
@@ -4,6 +4,16 @@
     ViewBag.Title = "Konica Minolta - Serienbriefgenerator";
 }
 
+@section scripts{
+    
+<script src="~/Scripts/knockout-3.4.0.js"></script>
+<script src="~/Scripts/knockout.mapping-latest.js"></script>
+<script src="~/Scripts/AdressViewModel.js"></script>
+    <script type="text/javascript">
+
+    </script>
+}
+
 <div class="row" id="km-header-content">
     <h2>Adressbuch</h2>
 </div>
@@ -56,7 +66,7 @@
                     @Html.DisplayFor(modelItem => item.Street)
                 </td>
                 <td>
-                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.Id })|
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })|
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Entfernen", "Delete", new { id = item.Id })
                 </td>
